# src/main/kotlin/com/collect/invest/plugins/controllers/UserController.kt
@@ -1,6 +1,7 @@
-package com.collect.invest.plugins.controllers.userServiceControllers
+package com.collect.invest.plugins.controllers
 
 import com.collect.invest.dao.UsersDao
+import com.collect.invest.dao.WalletsDao
 import com.collect.invest.dao.entity.UsersEntity
 import io.ktor.http.*
 import io.ktor.server.application.*
@@ -9,28 +10,30 @@ import io.ktor.server.response.*
 import io.ktor.server.routing.*
 
 
-fun Route.userController(usersDao: UsersDao){
+fun Route.userController(usersDao: UsersDao, walletsDao: WalletsDao){
 
 
-//Обработка запроса на добавление юзера
-    post("/saveUser") {
+    //Обработка запроса на добавление юзера
+    get("/saveUser") {
         try {
             val user = call.receive<UsersEntity>()
-            usersDao.saveUser(user)
-            call.respond("User added")
+            val userId = usersDao.saveUser(user)
+            walletsDao.createWallet(userId)
+            call.respond(HttpStatusCode.OK, mapOf("id" to userId))
         } catch (e: Throwable) {
-            call.respond(e.toString())
+            call.respond(HttpStatusCode.InternalServerError, e.toString())
         }
     }
 
-//Обработка запроса на получение юзера по его id
+    
     get("/authenticateUser/{email}/{password}") {
         try {
             val email = call.parameters["email"]!!
             val password = call.parameters["password"]!!
+            println("\n " + email)
             val user = usersDao.getByEmail(email)
             if (user != null && usersDao.checkPassword(password, user.password)) {
-                call.respond(mapOf("id" to user.id))
+                call.respond(HttpStatusCode.OK, mapOf("id" to user.id))
             } else {
                 call.respond(HttpStatusCode.Unauthorized, "Invalid email or password")
             }
@@ -38,7 +41,4 @@ fun Route.userController(usersDao: UsersDao){
             call.respond(HttpStatusCode.InternalServerError, "Error while processing request")
         }
     }
-
-
 }
-data class LoginRequest(val email: String, val password: String)
